Fix/Workaround table right column's text size weird behavior on mobile desktop mode plus some tweak & clean

--- a/themes/lost-theme/assets/css/main.css
+++ b/themes/lost-theme/assets/css/main.css
@@ -572,7 +572,6 @@ footer, .footer {
 }
 
 nav, .nav {
-	--nav-width: 0;
 	display: flex;
 	flex-flow: column;
 	/*resize: horizontal;*/ /*flex: 33.3%;*/ /* TBD: Swap for not allowing horizontal resizing (finally, commented after adding border resize) */
@@ -1103,9 +1102,9 @@ table {
 	container-type: inline-size;
 	width: 100%;
 	margin-bottom: 8px;
-	font-size: smaller;
+	font-size: 0.75em;
 	font-size: clamp(0.5em, 4.5cqw, 1em);
-	line-height: clamp(1.16em, 4.5cqw, 1.33em);
+	line-height: clamp(1.25em, 4.5cqw, 1.33em);
 	/*border-collapse: collapse;*/
 	border-spacing: 0;
 	border-radius: var(--round);
@@ -1123,7 +1122,6 @@ table {
 		padding: 0.2em 0.4em;
 		border-right: 1px solid var(--gray-A5);
 		border-bottom: 1px solid var(--gray-A5);
-		font-size: inherit;
 		/*line-height: 0;*/ /* Alternative to `display: block` for no bottom padding (hacky) */
 
 		&:last-child {
@@ -2455,8 +2453,7 @@ input:not(input:checked) + .label {
 /************/
 
 /* Nav modes */
-/*
-nav > section {
+/*nav > section {
 	--nav-width: 0;
 	&[data-nav-mode="auto"] { --nav-mode: auto; }
 	&[data-nav-mode="tabbed"] { --nav-mode: tabbed; }
@@ -2466,7 +2463,7 @@ nav > section {
 /* Nav accordion/narrow mode */
 @container nav (width < 192px) {
 	nav > section {
-		--nav-width: -192;
+		--nav-swap: -192;
 	}
 	#nav-footer .copyright.long {
 		display: none !important;
@@ -2531,8 +2528,9 @@ nav > section {
 	}
 }
 
+/* Nav tab/wide mode */
 @container style(--nav-mode: accordion) or style(--nav-mode: auto) {
-	@container style(--nav-mode: accordion) or style(--nav-width: -192) {
+	@container style(--nav-mode: accordion) or style(--nav-swap: -192) {
 		.tabs {
 			flex-wrap: unset;
 			flex-direction: column;
@@ -2569,42 +2567,6 @@ nav > section {
 	}
 }
 
-/* Tab mode */
-@container nav (width >= 192px) {
-	nav > section {
-		--nav-width: 192;
-	}
-
-	.tabs {
-		/*height: 100%;
-		flex-direction: row;
-		flex-wrap: wrap;*/
-	}
-	.label {
-		/*flex: 1 0 auto;
-		position: sticky;
-		top: 0;
-		width: auto;
-		text-align: center;
-		z-index: 1;*/
-	}
-	.panel {
-		/*order: 99;
-		width: 100%;*/
-		/* Added rules bellow to solve dissapearing colorized images issue! */
-		/*height: 0;
-		padding-top: 0;
-		padding-bottom: 0;
-		visibility: hidden;*/
-	}
-	.input:checked + .label + .panel {
-		/*display: flex 1;*/
-		/*height: calc(100% - var(--tabs-h, 32px));*/
-		/*top: 0;*/ /* dispensable? */
-		/*padding-top: 8px;*/ /* Added to solve dissapearing colorized images issue! */
-	}
-}
-
 @container header (width < 512px) {
 	#banner {
 		display: none;
@@ -2618,8 +2580,9 @@ nav > section {
 }
 
 @media (pointer: coarse) { /* Pointer isn't very precise (e.g. touch/hybrid device) */
-	table {
-		font-size: smaller !important;
+	.resizer::before {
+		transform-origin: 67%;
+		transform: scale(1.5);
 	}
 
 	#linker{
@@ -2665,20 +2628,14 @@ nav > section {
 		}
 	}
 
-	.resizer::before {
-		transform-origin: 67%;
-		transform: scale(1.5);
-	}
+	/* Workaround for weird mobile's 'Desktop mode' scalable font-size behavior! */
+	@container main (inline-size < 320px) { table{font-size: 0.67em; line-height: 1.275} }
+	@container main (inline-size >= 320px) and (inline-size < 640px) { table{font-size: 0.83em; line-height: 1.3} }
+	@container main (inline-size >= 640px) { table{font-size: 1em; line-height: 1.325} }
 }
 
 @media (hover: none) { /* No pointer that can hover (e.g. a pure touch device) */
 	
-}
-
-@media (width < 600px) {
-	body {
-		/*background-color: #000;*/
-	}
 }
 
 @supports not selector(::-webkit-scrollbar) { /* Wrap new scrollbar properties in @supports rule for browsers without `::-webkit-scrollbar-...` support. This way chrome won't override `::-webkit-scrollbar-...` selectors */
@@ -2704,11 +2661,3 @@ nav > section {
 	50% { color: var(--accent ); }
 	100% { color: unset; }
 }
-
-/* Example for a rule that acts always over a container with e.g. `container: dropdown / inline-size;`
-@container dropdown (min-width: 0) {
-	> {
-		translate: -100% 0;
-	}
-}
-*/
